# study-tensorflow

./: CMakeLists.txt  README.md  add.cc  frozen_add_model.pb  img_data.inc  main.cpp
misc/: CMakeLists.txt  tensor.cc
mnist/: predict_tf.py  train_tf.py
mnist-example/inference_cpp/: CMakeLists.txt  mnist.cc
mnist-example/mnist/: frozen_model.pb  train_tf.py
tf-dbg/: INFO.md
tf-dbg-v2/python-scripts/: simple_add.py
tf-dbg-v2/python-scripts/simple_add_v2/00001/: saved_model.pb
tf-dbg-v2/python-scripts/simple_add_v2/00001/variables/: variables.data-00000-of-00001  variables.index
tf-dbg-v2/start_tf_simple/: CMakeLists.txt  saved_add.cc  tensor_util.hpp
tf-dbg/python-scripts/: frozen_add_model.pb  frozen_model_dump.txt  model_util.py  simple_add.py
tf-dbg/python-scripts/saved_simple_add/00001/: saved_model.pb
tf-dbg/python-scripts/saved_simple_add/00001/variables/: variables.data-00000-of-00001  variables.index
tf-dbg/start_tf_simple/: CMakeLists.txt  README.md  add.cc  add.hpp  help.cmake  main.cc  saved_add.cc
tf-dbg/start_tf_simple/test/: CMakeLists.txt  add_test.cc
tfs-dbg/start_tf_serving/: CMakeLists.txt  INFO.md  client.cc
tfs-dbg/start_tf_serving/apis/: CMakeLists.txt  get_model_metadata.pb.cc  get_model_metadata.pb.h  input.pb.cc  input.pb.h  model_service.grpc.pb.cc  model_service.grpc.pb.h  predict.pb.cc  predict.pb.h  prediction_service.grpc.pb.cc  prediction_service.grpc.pb.h  session_service.pb.cc  session_service.pb.h
